# starlette_babel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  coverage.xml  pyproject.toml
.github/workflows/: lint.yml  lint_and_test.yml  publish.yml
examples/: app.py  pybabel.ini
examples/locales/: messages.pot
examples/locales/be/LC_MESSAGES/: messages.mo  messages.po
examples/locales/pl/LC_MESSAGES/: messages.mo  messages.po
examples/templates/: index.html
starlette_babel/: __init__.py  formatters.py  locale.py  timezone.py  translator.py
starlette_babel/contrib/: jinja.py
tests/: test_formatters.py  test_locale.py  test_timezone.py  test_translator.py
tests/contrib/: test_jinja.py
tests/extra_locales/be/LC_MESSAGES/: errors.mo  errors.po  messages.mo  messages.po
tests/locales/be/LC_MESSAGES/: errors.mo  errors.po  messages.mo  messages.po
tests/locales/pl/LC_MESSAGES/: errors.mo  errors.po  messages.mo  messages.po
