[project]
name = "starlette_babel"
description = "Locale support for Starlette"
version = "1.1.0"
authors = [{ name = "Alex Oleshkevich", email = "alex.oleshkevich@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["starlette", "babel", "i18n", "l10n", "locale", "timezone", "translation", "formatting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "Babel>=2.18",
    "starlette",
]

[project.urls]
Homepage = "https://github.com/alex-oleshkevich/starlette_babel"
Repository = "https://github.com/alex-oleshkevich/starlette_babel"
Documentation = "https://github.com/alex-oleshkevich/starlette_babel"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "mypy>=1.19",
    "httpx>=0.28",
    "types-babel>=2.11",
    "Jinja2>=3.1.6",
]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.7,<0.8"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["starlette_babel"]
omit = ["tests/*", ".venv/*", ".git/*", "*/__main__.py", "examples"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
files = ["starlette_babel", "examples", "tests"]
pretty = true
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = 'auto'
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]
filterwarnings = []

[tool.ruff]
exclude = [
    ".egg",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
